--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     display: grid;
     gap: 10px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     width: 300px;
     height: 500px;
 }
@@ -21,6 +22,16 @@
 .calBtn {
     border: 2px solid grey;
     border-radius: 6px;
+    /* text-align: center; */
+    /* padding: 20px; */
+}
+
+.display {
     text-align: center;
-    padding: 20px;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    border: 2px solid lightgrey;
+    border-radius: 6px;
+    font-size: 18pt;
+    padding: 8% 0 0 0;
 }
